To playere, der afspiller simultant i hver sin kanal, med hver sin lyd. Player 2 mangler seekbar og volumebar.

--- a/app/src/main/res/layout/activity_quickstart.xml
+++ b/app/src/main/res/layout/activity_quickstart.xml
@@ -3,7 +3,32 @@
     android:id="@+id/preset_quick"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@xml/quickstart_background">
+    android:background="#E9F2F9">
+
+    <Button
+        android:id="@+id/home_rectangle"
+        android:layout_width="66dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="171dp"
+        android:layout_marginTop="603dp"
+        android:background="@xml/home_rectangle" />
+
+    <Button
+        android:id="@+id/rectangle_"
+        android:layout_width="258dp"
+        android:layout_height="57dp"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="78dp"
+        android:layout_marginTop="140dp"
+        android:background="@xml/quickstart_bars"
+        android:elevation="3dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="SLEEP"
+        android:textAppearance="@style/sleep"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/sonority_by2"
@@ -15,11 +40,11 @@
         android:layout_marginStart="112dp"
         android:layout_marginLeft="112dp"
         android:layout_marginTop="37dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
         android:text="SONORITY BY AUDIENTES"
         android:textAppearance="@style/sonority_by2"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/sonic_distr2"
@@ -29,11 +54,11 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="105dp"
         android:layout_marginTop="74dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
         android:text="SONIC DISTRACTION"
         android:textAppearance="@style/sonic_distr2"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
 
     <Button
@@ -42,15 +67,14 @@
         android:layout_height="57dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="198dp"
-        android:text="SLEEP"
-        android:fontFamily="sans-serif-medium"
-        android:textAppearance="@style/sleep"
+        android:layout_marginLeft="79dp"
+        android:layout_marginTop="237dp"
         android:background="@xml/quickstart_bars"
         android:elevation="3dp"
-        android:textStyle="bold"/>
-
+        android:fontFamily="sans-serif-medium"
+        android:text="SLEEP"
+        android:textAppearance="@style/sleep"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/rectangle_2"
@@ -60,12 +84,13 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="76dp"
         android:layout_marginTop="332dp"
-        android:text="AMBIENCE"
-        android:fontFamily="sans-serif-medium"
-        android:textAppearance="@style/ambience"
         android:background="@xml/quickstart_bars"
         android:elevation="3dp"
-        android:textStyle="bold"/>
+        android:fontFamily="sans-serif-medium"
+        android:text="AMBIENCE"
+        android:textAppearance="@style/ambience"
+        android:textStyle="bold" />
+
 
     <Button
         android:id="@+id/rectangle_3"
@@ -73,46 +98,14 @@
         android:layout_height="57dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="79dp"
-        android:layout_marginTop="466dp"
-        android:text="NOISE DISTRACTION"
-        android:fontFamily="sans-serif-medium"
-        android:textAppearance="@style/ambience"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="432dp"
         android:background="@xml/quickstart_bars"
         android:elevation="3dp"
-        android:textStyle="bold"/>
-
-
-    <Button
-        android:id="@+id/home_rectangle1"
-        android:layout_width="66dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="65dp"
-        android:layout_marginTop="605dp"
-        android:background="@xml/home_rectangle" />
-
-    <View
-        android:id="@+id/home_rectangle1_settings"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="37dp"
-        android:layout_marginTop="558dp"
-        android:background="@drawable/settings_icon"
-        android:elevation="3dp" />
-
-    <Button
-        android:id="@+id/home_rectangle2"
-        android:layout_width="66dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="172dp"
-        android:layout_marginTop="605dp"
-        android:background="@xml/home_rectangle" />
+        android:fontFamily="sans-serif-medium"
+        android:text="NOISE DISTRACTION"
+        android:textAppearance="@style/ambience"
+        android:textStyle="bold" />
 
     <View
         android:id="@+id/home_sound_settings"
@@ -145,16 +138,5 @@
         android:layout_marginTop="599dp"
         android:background="@drawable/graph_icon"
         android:elevation="3dp" />
-
-    <Button
-        android:id="@+id/component_8"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="352dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/home_house"
-        android:elevation="5dp"/>
 
 </RelativeLayout>
