--- a/app/src/main/res/drawable-xhdpi/preset_add_highlight_rectangle.xml
+++ b/app/src/main/res/drawable-xhdpi/preset_add_highlight_rectangle.xml
@@ -20,7 +20,7 @@
         <path
             android:pathData="M10 0H75C80.5228 0 85 4.47715 85 10V75C85 80.5228 80.5228 85 75 85H10C4.47715 85 0 80.5228 0 75V10C0 4.47715 4.47715 0 10 0Z"
             android:strokeWidth="4"
-            android:strokeColor="#1B325F"
+            android:strokeColor="#9CC4E4"
             />
 
     </group>
