--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_frame"
+        />
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout2"
         android:layout_width="match_parent"
@@ -23,6 +29,7 @@
         app:tabTextAppearance="@style/sonority_by2">
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/container1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:icon="@drawable/ic_settings_tab"
