--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,10 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/preset_quick"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@xml/frontpage_background_2">
+    android:id="@+id/settings_fragment"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@xml/frontpage_background_2"
+    tools:context=".SettingsFragment">
 
     <TextView
         android:id="@+id/sonority_by_audientes"
