--- a/app/src/main/res/layout/fragment_create_preset.xml
+++ b/app/src/main/res/layout/fragment_create_preset.xml
@@ -57,23 +57,16 @@
 
     <Button
         android:id="@+id/cancel_create_preset"
-        android:layout_width="100dp"
+        android:layout_width="160dp"
         android:layout_height="55dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="480dp"
+        android:layout_gravity="center_horizontal"
         android:background="@xml/edit_play_rectangle"
-        android:text="EDIT"
+        android:text="Done"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-medium"
         android:textAppearance="@style/Play_ambience" />
 
-    <Button
-        android:id="@+id/save_create_preset"
-        android:layout_width="100dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="450dp"
-        android:background="@xml/edit_play_rectangle"
-        android:text="PLAY"
-        android:textAppearance="@style/Play_ambience" />
 
 
 
