--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -6,7 +6,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@xml/frontpage_background_2"
-    tools:context=".PlayFragment">
+    tools:context=".PlayFragment"
+    android:clickable="true"
+    android:focusable="true">
 
     <TextView
         android:id="@+id/sonority_by"
