--- a/app/src/main/res/layout/listview_text_color.xml
+++ b/app/src/main/res/layout/listview_text_color.xml
@@ -2,6 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/text1"
     android:textColor="#1B325F"
+    android:textSize="20sp"
     android:layout_width="fill_parent"
-    android:gravity="center"
+    android:gravity="start"
     android:layout_height="fill_parent"/>
