Nyt layout på listview

--- a/app/src/main/res/layout/fragment_sleep_choose_song.xml
+++ b/app/src/main/res/layout/fragment_sleep_choose_song.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@xml/ambience_background"
+    android:fadingEdgeLength="40dp"
     tools:context=".SleepChooseSongFragment">
 
     <TextView
@@ -29,96 +30,96 @@
         android:layout_marginTop="70dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text="AMBIENCE MODE"
+        android:text="Ambience Preset"
         android:textAppearance="@style/home"
         android:textColor="#1B325F"
         android:textStyle="bold"
         app:drawableLeftCompat="@drawable/ic_ambience_icon" />
 
 
-
     <ListView
         android:id="@+id/listview_songs"
         android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_height="160dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="180dp">
-    <!--- android:listSelector="@drawable/selector_list" -->
+        <!--- android:listSelector="@drawable/selector_list" -->
 
-</ListView>
+    </ListView>
 
-<View
- android:layout_width="300dp"
- android:layout_height="300dp"
- android:layout_gravity="center_horizontal"
- android:layout_marginTop="150dp"
- android:background="@drawable/listview_rectangle" />
+    <View
+        android:layout_width="300dp"
+        android:layout_height="326dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="180dp"
+        android:background="@drawable/listview_rectangle" />
 
-<Button
- android:layout_width="wrap_content"
- android:layout_height="wrap_content"
- android:layout_gravity="center_horizontal"
- android:layout_marginTop="490dp"
- android:background="@drawable/add_list_rectangle"
- android:text="ADD TO LIST"
- android:textAppearance="@style/Play_ambience"
- android:textStyle="bold" />
+    <Button
+        android:layout_width="130dp"
+        android:layout_height="32dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/add_list_rectangle"
+        android:text="Add new sound"
+        android:textAppearance="@style/Play_ambience"
+        android:textStyle="bold" />
 
-<SeekBar
- android:layout_width="240dp"
- android:layout_height="wrap_content"
- android:layout_marginStart="120dp"
- android:layout_marginTop="560dp"
- android:layout_marginEnd="0dp"
- android:progress="30"
- android:theme="@style/SeekBarTheme" />
+    <SeekBar
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="360dp"
+        android:layout_marginEnd="0dp"
+        android:progress="30"
+        android:theme="@style/SeekBarTheme" />
 
-<TextView
- android:layout_width="wrap_content"
- android:layout_height="wrap_content"
- android:layout_marginStart="50dp"
- android:layout_marginTop="560dp"
- android:text="VOLUME"
- android:textAppearance="@style/Play_ambience"
- android:textStyle="bold" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="360dp"
+        android:text="VOLUME"
+        android:textAppearance="@style/Play_ambience"
+        android:textStyle="bold" />
 
-<SeekBar
- android:layout_width="240dp"
- android:layout_height="wrap_content"
- android:layout_marginStart="120dp"
- android:layout_marginTop="600dp"
- android:layout_marginEnd="0dp"
- android:progress="30"
- android:theme="@style/SeekBarTheme" />
+    <SeekBar
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="400dp"
+        android:layout_marginEnd="0dp"
+        android:progress="30"
+        android:theme="@style/SeekBarTheme" />
 
-<TextView
- android:layout_width="wrap_content"
- android:layout_height="wrap_content"
- android:layout_marginStart="50dp"
- android:layout_marginTop="600dp"
- android:text="DURATION"
- android:textAppearance="@style/Play_ambience"
- android:textStyle="bold" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="400dp"
+        android:text="DURATION"
+        android:textAppearance="@style/Play_ambience"
+        android:textStyle="bold" />
 
-<Button
- android:layout_width="wrap_content"
- android:layout_height="wrap_content"
- android:layout_marginStart="80dp"
- android:layout_marginTop="650dp"
- android:background="@xml/edit_play_rectangle"
- android:text="CANCEL"
- android:textAppearance="@style/Play_ambience"
- android:textStyle="bold" />
+    <Button
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="440dp"
+        android:background="@xml/edit_play_rectangle"
+        android:text="CANCEL"
+        android:textAppearance="@style/Play_ambience"
+        android:textStyle="bold" />
 
-<Button
- android:layout_width="wrap_content"
- android:layout_height="wrap_content"
- android:layout_marginStart="240dp"
- android:layout_marginTop="650dp"
- android:background="@xml/edit_play_rectangle"
- android:text="OK"
- android:textAppearance="@style/Play_ambience"
- android:textStyle="bold" />
+    <Button
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="240dp"
+        android:layout_marginTop="440dp"
+        android:background="@xml/edit_play_rectangle"
+        android:text="ADD TO PRESET"
+        android:textAppearance="@style/Play_ambience"
+        android:textStyle="bold" />
 
 
 </FrameLayout>
