Nye Layouts. Refactorede navne på xml og klasser. Nye drawables. Ændret Butt_Nav

--- a/app/src/main/res/layout/fragment_create_preset.xml
+++ b/app/src/main/res/layout/fragment_create_preset.xml
@@ -4,7 +4,7 @@
     android:id="@+id/add_preset"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@xml/ambience_background"
+    android:background="@xml/sound_background"
     tools:context=".CreatePresetFragment">
 
     <EditText
