--- a/app/src/main/res/layout/fragment_sleep_choose_song.xml
+++ b/app/src/main/res/layout/fragment_sleep_choose_song.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@xml/ambience_background"
+    android:background="@xml/sound_background"
     android:overScrollMode="never"
-    tools:context=".SleepChooseSongFragment">
+    tools:context=".LibraryFragment">
 
     <TextView
         android:layout_width="187dp"
