--- a/app/src/main/res/layout/fragment_ambience.xml
+++ b/app/src/main/res/layout/fragment_ambience.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@xml/ambience_background"
+    android:background="@xml/sound_background"
     tools:context=".PresetFragment">
 
     <TextView
@@ -18,7 +18,7 @@
         android:layout_marginTop="37dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="SONORITY BY AUDIENTES"
+        android:text="Sonority By Audientes"
         android:textAppearance="@style/sonority_by2"
         android:textStyle="bold" />
 
@@ -30,7 +30,7 @@
         android:layout_marginTop="70dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="PRESETS"
+        android:text="Sound"
         android:textAppearance="@style/home"
         android:textColor="#1B325F"
         android:textStyle="bold" />
@@ -116,34 +116,62 @@
         android:textAppearance="@style/Play_ambience" />
 
     <Button
-        android:id="@+id/select_preset_button_9"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="284dp"
-        android:layout_marginTop="380dp"
-        android:background="@xml/preset_add_rectangle"
-        android:text="ADD NEW"
+        android:id="@+id/plus_button"
+        android:layout_width="66dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/ic_plus_icon"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
         android:id="@+id/edit_preset_button"
         android:layout_width="100dp"
-        android:layout_height="55dp"
+        android:layout_height="91dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="520dp"
-        android:background="@xml/edit_play_rectangle"
-        android:text="EDIT"
+        android:background="@drawable/ic_concurrent_icon"
         android:textAppearance="@style/Play_ambience" />
+
+    <TextView
+        android:id="@+id/concurrent"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="630dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="Concurrent Mode"
+        android:textAppearance="@style/sonority_by2"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/play_preset_button"
         android:layout_width="100dp"
-        android:layout_height="55dp"
+        android:layout_height="87dp"
         android:layout_marginStart="250dp"
         android:layout_marginTop="520dp"
-        android:background="@xml/edit_play_rectangle"
-        android:text="PLAY"
+        android:background="@drawable/ic_continuous_icon"
         android:textAppearance="@style/Play_ambience" />
+    <TextView
+        android:id="@+id/continuous_Mode"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="250dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="630dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="Continuous Mode"
+        android:textAppearance="@style/sonority_by2"
+        android:textStyle="bold" />
 
 
 </FrameLayout>
