--- a/app/src/main/res/layout/fragment_sound.xml
+++ b/app/src/main/res/layout/fragment_sound.xml
@@ -42,7 +42,7 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="130dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="ADD NEW"
+        android:text="Add New"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -52,7 +52,7 @@
         android:layout_marginStart="161dp"
         android:layout_marginTop="130dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="ADD NEW"
+        android:text="Add New"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -62,7 +62,7 @@
         android:layout_marginStart="284dp"
         android:layout_marginTop="130dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="ADD NEW"
+        android:text="Add New"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -72,7 +72,7 @@
         android:layout_marginStart="284dp"
         android:layout_marginTop="255dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="ADD NEW"
+        android:text="Add New"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -82,7 +82,7 @@
         android:layout_marginStart="161dp"
         android:layout_marginTop="255dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="ADD NEW"
+        android:text="Add New"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -92,7 +92,7 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="255dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="ADD NEW"
+        android:text="Add New"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -102,7 +102,7 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="380dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="ADD NEW"
+        android:text="Add New"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -112,7 +112,7 @@
         android:layout_marginStart="161dp"
         android:layout_marginTop="380dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="ADD NEW"
+        android:text="Add New"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -126,11 +126,12 @@
 
     <Button
         android:id="@+id/edit_preset_button"
-        android:layout_width="100dp"
-        android:layout_height="91dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="520dp"
-        android:background="@drawable/ic_concurrent_icon"
+        android:background="@drawable/ic_concurrent_marked_icon"
+        android:foreground="@drawable/ic_concurrent_icon"
         android:textAppearance="@style/Play_ambience" />
 
     <TextView
@@ -151,11 +152,12 @@
 
     <Button
         android:id="@+id/play_preset_button"
-        android:layout_width="100dp"
-        android:layout_height="87dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginStart="250dp"
         android:layout_marginTop="520dp"
-        android:background="@drawable/ic_continuous_icon"
+        android:background="@drawable/ic_continuous_marked_icon"
+        android:foreground="@drawable/ic_continuous_icon"
         android:textAppearance="@style/Play_ambience" />
     <TextView
         android:id="@+id/continuous_Mode"
